feat(setup): Ability to add players.
- Uncommenting addPlayer effect.
- Creating addPlayer to SetupPageActions.
- Aligning the player name form.
- Fixing height on the page component.
- Hooking up page to the store/actions.

Issue #96

--- a/src/app/setup/organisms/new-player-sheet/new-player-sheet.component.scss
+++ b/src/app/setup/organisms/new-player-sheet/new-player-sheet.component.scss
@@ -7,6 +7,7 @@
 
 :host {
   display: flex;
+  align-items: center;
   @include min-height($mat-toolbar-height-desktop);
 
   @media ($mat-xsmall) {
