--- a/src/app/setup/organisms/new-player-sheet/new-player-sheet.component.html
+++ b/src/app/setup/organisms/new-player-sheet/new-player-sheet.component.html
@@ -1,6 +1,12 @@
 <mat-form-field class="name-field">
   <mat-label>Name</mat-label>
-  <input matInput type="text" [formControl]="name" (keyup.enter)="submit()" />
+  <input
+    matInput
+    autocomplete="off"
+    type="text"
+    [formControl]="name"
+    (keyup.enter)="submit()"
+  />
 </mat-form-field>
 
 <button mat-button color="primary" class="add-button" (click)="submit()">
