--- a/src/app/setup/organisms/players-list/players-list.component.html
+++ b/src/app/setup/organisms/players-list/players-list.component.html
@@ -1,5 +1,9 @@
 <mat-action-list>
-  <button mat-list-item *ngFor="let player of players?.reverse()">
+  <button
+    mat-list-item
+    [@listItem]="initialPlayers.has(player) ? 'initial' : 'new'"
+    *ngFor="let player of players?.reverse()"
+  >
     {{ player.name }}
   </button>
 </mat-action-list>
