--- a/src/app/setup/molecules/new-player-list-item/new-player-list-item.component.html
+++ b/src/app/setup/molecules/new-player-list-item/new-player-list-item.component.html
@@ -1,27 +1,13 @@
-<button mat-list-item (click)="onClick()">
-  <!-- <span *ngIf="!isAdding">
-    <em>New player name</em>
-  </span> -->
-
+<button mat-list-item>
   <mat-form-field class="name-form-field">
-    <mat-label>New player name</mat-label>
     <input
       matInput
       autocomplete="off"
       class="name-input"
       type="text"
       #nameInput
+      (blur)="cancel.emit()"
       (keyup)="onKeyup($event)"
     />
-    <button
-      mat-button
-      mat-icon-button
-      matSuffix
-      aria-label="Clear"
-      *ngIf="nameInput.value"
-      (click)="nameInput.value = ''"
-    >
-      <mat-icon>close</mat-icon>
-    </button>
   </mat-form-field>
 </button>
