--- a/src/app/setup/organisms/players-list/players-list.component.html
+++ b/src/app/setup/organisms/players-list/players-list.component.html
@@ -6,5 +6,9 @@
   >
     {{ player.name }}
   </button>
-  <mm-new-player-list-item *ngIf="isAdding"></mm-new-player-list-item>
+  <mm-new-player-list-item
+    *ngIf="isAdding"
+    (cancel)="onCancel()"
+    (newPlayer)="onNewPlayer($event)"
+  ></mm-new-player-list-item>
 </mat-action-list>
