--- a/src/app/setup/pages/setup-page/setup-page.component.html
+++ b/src/app/setup/pages/setup-page/setup-page.component.html
@@ -1,9 +1,11 @@
 <mm-setup-header class="header mat-elevation-z4"></mm-setup-header>
 
 <mm-players-list
+  class="players-list"
   [isAdding]="isAdding"
   [players]="players$ | async"
-  class="players-list"
+  (cancel)="onCancel()"
+  (newPlayer)="onNewPlayer($event)"
 ></mm-players-list>
 
 <mm-setup-footer
