feat(setup): More add player work.
- Cancelling add mode on enter key if nothing entered.
- Removing no longer needed animations.
- Cleaning up some names and events.
- Getting rid of no longer needed initialPlayers set in players list.

Issue #96

--- a/src/app/setup/pages/setup-page/setup-page.component.html
+++ b/src/app/setup/pages/setup-page/setup-page.component.html
@@ -2,16 +2,15 @@
 
 <mm-players-list
   class="players-list"
-  [isAdding]="isAdding"
+  [adding]="isAdding"
   [players]="players$ | async"
   (cancel)="onCancel()"
   (deletePlayer)="deletePlayer($event)"
-  (newPlayer)="onNewPlayer($event)"
   (playerChanged)="playerChanged($event)"
 ></mm-players-list>
 
 <mm-setup-footer
   class="footer"
-  (add)="onAdd()"
-  (deleteAll)="onDeleteAll()"
+  (add)="startAdding()"
+  (deleteAll)="deleteAllPlayers()"
 ></mm-setup-footer>
