feat(setup): Removing invalid animation markup from the HTML.
Issue #96

--- a/src/app/setup/organisms/players-list/players-list.component.html
+++ b/src/app/setup/organisms/players-list/players-list.component.html
@@ -1,9 +1,5 @@
 <mat-action-list>
-  <button
-    mat-list-item
-    [@listItem]="initialPlayers.has(player) ? 'initial' : 'new'"
-    *ngFor="let player of players"
-  >
+  <button mat-list-item *ngFor="let player of players">
     {{ player.name }}
   </button>
   <mm-new-player-list-item
