--- a/src/sass/themes/_theme.scss
+++ b/src/sass/themes/_theme.scss
@@ -1,31 +1,50 @@
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
+$mirror-match-typography: mat-typography-config(
+  $font-family: 'Roboto, monospace'
+);
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat-core($mirror-match-typography);
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $mirror-match-primary: mat-palette($mat-blue, 400);
-$mirror-match-accent:  mat-palette($mat-indigo, A200, A100, A400);
+$mirror-match-accent: mat-palette($mat-indigo, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$mirror-match-warn:    mat-palette($mat-red);
+$mirror-match-warn: mat-palette($mat-red);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as `color` or `typography`.
-$mirror-match-theme: mat-light-theme((
-  color: (
-    primary: $mirror-match-primary,
-    accent: $mirror-match-accent,
-    warn: $mirror-match-warn,
+$mirror-match-theme: mat-light-theme(
+  (
+    color: (
+      primary: $mirror-match-primary,
+      accent: $mirror-match-accent,
+      warn: $mirror-match-warn
+    )
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($mirror-match-theme);
+
+@mixin mm-editable-text-typography($config-or-theme) {
+  // @debug "#{$config-or-theme}";
+  $config: mat-get-typography-config($config-or-theme);
+
+  mm-editable-text {
+    font: {
+      family: mat-font-family($config, body-1);
+    }
+  }
+}
+
+@include mm-editable-text-typography($mirror-match-theme);
