--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,17 +3,17 @@
 
 $primary: map-get($mirror-match-theme, primary);
 $background: map-get($mirror-match-theme, background);
-$density-scale: mat-get-density-config($mirror-match-theme);
-$height-desktop: _mat-density-prop-value(
-  $mat-toolbar-desktop-density-config,
-  $density-scale,
-  height
-);
-$height-mobile: _mat-density-prop-value(
-  $mat-toolbar-mobile-density-config,
-  $density-scale,
-  height
-);
+// $density-scale: mat-get-density-config($mirror-match-theme);
+// $height-desktop: _mat-density-prop-value(
+//   $mat-toolbar-desktop-density-config,
+//   $density-scale,
+//   height
+// );
+// $height-mobile: _mat-density-prop-value(
+//   $mat-toolbar-mobile-density-config,
+//   $density-scale,
+//   height
+// );
 $nav-link-height: 48px;
 
 :host {
