--- a/src/sass/themes/_theme.scss
+++ b/src/sass/themes/_theme.scss
@@ -1,14 +1,12 @@
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
-$mirror-match-typography: mat-typography-config(
-  $font-family: 'Roboto, monospace'
-);
+$mirror-match-typography: mat-typography-config();
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core($mirror-match-typography);
+@include mat-core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
@@ -36,15 +34,20 @@ $mirror-match-theme: mat-light-theme(
 // that you are using.
 @include angular-material-theme($mirror-match-theme);
 
-// @mixin mm-editable-text-typography($config-or-theme) {
-//   // @debug "#{$config-or-theme}";
-//   $config: mat-get-typography-config($config-or-theme);
+@mixin mm-editable-text-typography($config-or-theme) {
+  // @debug "#{$config-or-theme}";
+  // $config: mat-get-typography-config($config-or-theme);
+  $config: $mirror-match-typography;
 
-//   mm-editable-text {
-//     font: {
-//       family: mat-font-family($config, body-1);
-//     }
-//   }
-// }
+  mm-editable-text {
+    textarea {
+      font: {
+        family: mat-font-family($config, subheading-2);
+        size: mat-font-size($config, subheading-2);
+      }
+      line-height: inherit;
+    }
+  }
+}
 
-// @include mm-editable-text-typography($mirror-match-theme);
+@include mm-editable-text-typography($mirror-match-theme);
