feat(setup): Got the editable text working pretty good.
- Updated some naming in PlayersApiActions.
- Updated PlayerEffects to watch for the SetupPage.
- Updated some naming in PlayersReducer.
- Created updatePlayer action in SetupPageActions.
- Added playerChanged event and editingPlayer to PlayersList.
- Styling EditableText, and autofocusing on start editing.
- Switched from textarea to input since it will always be a single line.

Issue #96

--- a/src/app/setup/organisms/players-list/players-list.component.html
+++ b/src/app/setup/organisms/players-list/players-list.component.html
@@ -2,7 +2,15 @@
   <button mat-list-item *ngFor="let player of players">
     {{ player.name }}
   </button>
-  <button mat-list-item *ngFor="let player of players">
-    <mm-editable-text [text]="player.name"></mm-editable-text>
+  <button
+    mat-list-item
+    (click)="editingPlayer = player"
+    *ngFor="let player of players"
+  >
+    <mm-editable-text
+      [editing]="editingPlayer == player"
+      [text]="player.name"
+      (doneEditing)="onPlayerEdited(player, $event)"
+    ></mm-editable-text>
   </button>
 </mat-action-list>
