--- a/src/app/shared/molecules/editable-text/editable-text.component.html
+++ b/src/app/shared/molecules/editable-text/editable-text.component.html
@@ -1,2 +1,2 @@
 <div *ngIf="!editing">{{ text }}</div>
-<textarea *ngIf="editing">{{ text }}</textarea>
+<input #input *ngIf="editing" [value]="text" (blur)="stopEditing()" />
