--- a/src/sass/themes/_theme.scss
+++ b/src/sass/themes/_theme.scss
@@ -1,5 +1,6 @@
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
+@import 'mm-editable-text';
 
 $mirror-match-typography: mat-typography-config();
 
@@ -25,7 +26,8 @@ $mirror-match-theme: mat-light-theme(
       primary: $mirror-match-primary,
       accent: $mirror-match-accent,
       warn: $mirror-match-warn
-    )
+    ),
+    typography: $mirror-match-typography
   )
 );
 
@@ -33,20 +35,4 @@ $mirror-match-theme: mat-light-theme(
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($mirror-match-theme);
-
-@mixin mm-editable-text-typography($config-or-theme) {
-  // @debug "#{$config-or-theme}";
-  // $config: mat-get-typography-config($config-or-theme);
-  $config: $mirror-match-typography;
-
-  mm-editable-text {
-    input {
-      font: {
-        family: mat-font-family($config, subheading-2);
-        size: mat-font-size($config, subheading-2);
-      }
-    }
-  }
-}
-
 @include mm-editable-text-typography($mirror-match-theme);
