feat(setup): Working on player list functionality.
- Updating PlayerEffects deletePlayer.
- Adding deletePlayer action to SetupPageActions.
- Removing old "regular" list items from PlayersList.
- Adding deletePlayer event to PlayersList.
- Adding deletePlayer function to SetupPage.
- Sending an event to delete the player is a list item is backspaced all the way.

Issue #96

--- a/src/app/setup/organisms/players-list/players-list.component.html
+++ b/src/app/setup/organisms/players-list/players-list.component.html
@@ -1,7 +1,4 @@
 <mat-action-list>
-  <button mat-list-item *ngFor="let player of players">
-    {{ player.name }}
-  </button>
   <button
     mat-list-item
     (click)="editingPlayer = player"
@@ -10,6 +7,7 @@
     <mm-editable-text
       [editing]="editingPlayer == player"
       [text]="player.name"
+      (cleared)="onCleared(player)"
       (doneEditing)="onPlayerEdited(player, $event)"
     ></mm-editable-text>
   </button>
