--- a/src/app/setup/organisms/players-list/players-list.component.scss
+++ b/src/app/setup/organisms/players-list/players-list.component.scss
@@ -1,3 +1,16 @@
 :host {
   display: block;
+
+  // .mat-list-base {
+  //   .mat-list-item {
+  //     .mat-list-icon {
+  //       padding-left: 0;
+  //       padding-right: 32px;
+  //     }
+  //   }
+  // }
+
+  // mm-editable-text {
+  //   padding-left: 32px - 16px !important;
+  // }
 }
