--- a/src/sass/themes/_theme.scss
+++ b/src/sass/themes/_theme.scss
@@ -1,33 +1,20 @@
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
+@import 'color';
+@import 'typography';
 @import 'mm-editable-text';
-
-$mirror-match-typography: mat-typography-config();
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$mirror-match-primary: mat-palette($mat-blue, 400);
-$mirror-match-accent: mat-palette($mat-indigo, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$mirror-match-warn: mat-palette($mat-red);
-
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as `color` or `typography`.
 $mirror-match-theme: mat-light-theme(
   (
-    color: (
-      primary: $mirror-match-primary,
-      accent: $mirror-match-accent,
-      warn: $mirror-match-warn
-    ),
-    typography: $mirror-match-typography
+    'color': $mirror-match-color,
+    'typography': $mirror-match-typography
   )
 );
 
