--- a/src/app/setup/molecules/players-list-item/players-list-item.component.html
+++ b/src/app/setup/molecules/players-list-item/players-list-item.component.html
@@ -1,7 +1,7 @@
-<!-- <mat-icon>person</mat-icon> -->
 <div class="icon">
-  <ng-content select="mat-icon"></ng-content>
+  <mat-icon>{{ addPlayerItem ? 'person_add' : 'person' }}</mat-icon>
 </div>
 <div class="player-name">
-  <ng-content></ng-content>
+  <ng-container *ngIf="addPlayerItem">Add Player</ng-container>
+  <ng-content *ngIf="!addPlayerItem"></ng-content>
 </div>
