--- a/src/app/setup/molecules/players-list-item/players-list-item.component.scss
+++ b/src/app/setup/molecules/players-list-item/players-list-item.component.scss
@@ -2,6 +2,7 @@
 @import 'themes/color';
 @import 'themes/typography';
 
+$background: map-get($mirror-match-color, 'background');
 $foreground: map-get($mirror-match-color, 'foreground');
 $primary: map-get($mirror-match-color, 'primary');
 
@@ -9,7 +10,7 @@ $primary: map-get($mirror-match-color, 'primary');
   display: flex;
   align-items: center;
   height: 56px;
-  margin: 0 16px;
+  padding: 0 16px;
   font: {
     family: mat-font-family($mirror-match-typography, 'subheading-2');
     size: mat-font-size($mirror-match-typography, 'subheading-2');
@@ -19,6 +20,11 @@ $primary: map-get($mirror-match-color, 'primary');
   .icon {
     color: mat-color($foreground, 'icon');
     margin-right: 32px;
+  }
+
+  &:focus,
+  &:hover {
+    background: mat-color($background, 'hover');
   }
 
   &.colored {
