--- a/src/app/setup/organisms/players-list/players-list.component.html
+++ b/src/app/setup/organisms/players-list/players-list.component.html
@@ -1,27 +1,16 @@
-<mat-selection-list>
-  <mat-list-item mat-list-item class="mm-add-player-button">
-    <mat-icon mat-list-icon>add</mat-icon>
-    Add player
-  </mat-list-item>
-  <mat-list-option
-    (click)="editingPlayer = player"
-    *ngFor="let player of players"
-    checkboxPosition="before"
-  >
-    <mm-editable-text
-      [editing]="editingPlayer == player"
-      [text]="player.name"
-      (cleared)="onCleared(player)"
-      (doneEditing)="onPlayerEdited(player, $event)"
-    ></mm-editable-text>
-  </mat-list-option>
-</mat-selection-list>
-
-<mm-players-list-item [colored]="true">
-  <mat-icon>person_add</mat-icon>
-  Add Player
-</mm-players-list-item>
-<mm-players-list-item *ngFor="let player of players">
-  <mat-icon>person</mat-icon>
-  {{ player.name }}
+<mm-players-list-item
+  [addPlayerItem]="true"
+  (click)="createPlayer.emit()"
+></mm-players-list-item>
+<mm-players-list-item
+  role="option"
+  *ngFor="let player of players"
+  (click)="editingPlayer = player"
+>
+  <mm-editable-text
+    [editing]="editingPlayer == player"
+    [text]="player.name"
+    (cleared)="onCleared(player)"
+    (doneEditing)="onPlayerEdited(player, $event)"
+  ></mm-editable-text>
 </mm-players-list-item>
