feat(setup): Working on add player flow.
- Trying to change it so I'm not adding blank name players to the store.
- Fixing a bug with the footer acting weird on url-bar hide in mobile.
- Fixing a bug from the previous fix that was messing up the scroll lock

Issue #96

--- a/src/app/setup/organisms/players-list/players-list.component.html
+++ b/src/app/setup/organisms/players-list/players-list.component.html
@@ -3,7 +3,6 @@
   (click)="createPlayer.emit()"
 ></mm-players-list-item>
 <mm-players-list-item
-  role="option"
   *ngFor="let player of players"
   (click)="editingPlayer = player"
 >
@@ -12,5 +11,11 @@
     [text]="player.name"
     (cleared)="onCleared(player)"
     (doneEditing)="onPlayerEdited(player, $event)"
+  ></mm-editable-text>
+</mm-players-list-item>
+<mm-players-list-item *ngIf="adding">
+  <mm-editable-text
+    [editing]="true"
+    (doneEditing)="createNewPlayer($event)"
   ></mm-editable-text>
 </mm-players-list-item>
