--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -1,5 +1,6 @@
-body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+body,
+html {
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
   height: 100%;
   margin: 0;
   overflow-x: hidden;
