--- a/src/app/setup/pages/setup-page/setup-page.component.scss
+++ b/src/app/setup/pages/setup-page/setup-page.component.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/theming';
 
 @mixin body-margins($margin-height) {
-  margin-top: $margin-height;
+  // margin-top: $margin-height;
   margin-bottom: $margin-height;
 }
 
@@ -25,11 +25,11 @@
     z-index: 4;
   }
 
-  // .players-list {
-  //   @include body-margins($mat-toolbar-height-desktop);
+  .players-list {
+    @include body-margins($mat-toolbar-height-desktop);
 
-  //   @media ($mat-xsmall) {
-  //     @include body-margins($mat-toolbar-height-mobile);
-  //   }
-  // }
+    @media ($mat-xsmall) {
+      @include body-margins($mat-toolbar-height-mobile);
+    }
+  }
 }
