feat(setup): Got adding working pretty good again.
- Reworking newPlayerListItem
- Adding an abstract class for the two types of list items.

Issue #96

--- a/src/app/setup/molecules/players-list-item/players-list-item.component.scss
+++ b/src/app/setup/molecules/players-list-item/players-list-item.component.scss
@@ -17,6 +17,15 @@ $primary: map-get($mirror-match-color, 'primary');
     weight: mat-font-weight($mirror-match-typography, 'subheading-2');
   }
 
+  input {
+    background-color: transparent;
+    border: none;
+    font: inherit;
+    outline: none;
+    padding: 0;
+    width: 100%;
+  }
+
   .icon {
     color: mat-color($foreground, 'icon');
     margin-right: 32px;
