--- a/src/app/setup/molecules/new-player-list-item/new-player-list-item.component.html
+++ b/src/app/setup/molecules/new-player-list-item/new-player-list-item.component.html
@@ -1,13 +1,6 @@
-<button mat-list-item>
-  <mat-form-field class="name-form-field">
-    <input
-      matInput
-      autocomplete="off"
-      class="name-input"
-      type="text"
-      #nameInput
-      (blur)="cancel.emit()"
-      (keyup)="onKeyup($event)"
-    />
-  </mat-form-field>
-</button>
+<div class="icon">
+  <mat-icon>person</mat-icon>
+</div>
+<div class="player-name">
+  <input #input type="text" (blur)="cancel.emit()" (keyup)="onKeyup($event)" />
+</div>
