--- a/src/app/setup/pages/setup-page/setup-page.component.html
+++ b/src/app/setup/pages/setup-page/setup-page.component.html
@@ -1,8 +1,8 @@
 <!-- <mm-setup-header class="header mat-elevation-z4"></mm-setup-header> -->
 
 <mm-players-list
+  #playersList
   class="players-list"
-  [adding]="addingPlayer"
   [players]="players$ | async"
   (createPlayer)="createPlayer($event)"
   (deletePlayer)="deletePlayer($event)"
@@ -11,6 +11,6 @@
 
 <mm-setup-footer
   class="footer"
-  (add)="addingPlayer = true"
+  (add)="playersList.startAdding()"
   (deleteAll)="deleteAllPlayers()"
 ></mm-setup-footer>
