feat(setup): Changing icon on new player list item
Issue #96

--- a/src/app/setup/molecules/new-player-list-item/new-player-list-item.component.html
+++ b/src/app/setup/molecules/new-player-list-item/new-player-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="icon">
-  <mat-icon>person</mat-icon>
+  <mat-icon>person_add</mat-icon>
 </div>
 <div class="player-name">
   <input #input type="text" (blur)="cancel.emit()" (keyup)="onKeyup($event)" />
