feat(players): Showing delete player button.
- Previously was shown on hover, now also showing anytime while editing.

Issue #96

--- a/src/app/players/components/players-list-item/players-list-item.component.scss
+++ b/src/app/players/components/players-list-item/players-list-item.component.scss
@@ -41,19 +41,12 @@ $primary: map-get($mirror-match-color, 'primary');
   }
 
   &:focus,
-  &:hover {
+  &:hover,
+  &.editing {
     background: mat-color($background, 'hover');
 
     .delete-icon {
       display: block;
-    }
-  }
-
-  &.colored {
-    color: mat-color($primary);
-
-    .icon {
-      color: inherit;
     }
   }
 }
