feat(player): Tweaking players list items.
- Adding form control for better control over name.

Issue #96

--- a/src/app/players/components/new-player-list-item/new-player-list-item.component.html
+++ b/src/app/players/components/new-player-list-item/new-player-list-item.component.html
@@ -2,5 +2,11 @@
   <mat-icon>person_add</mat-icon>
 </div>
 <div class="player-name">
-  <input #input type="text" (blur)="cancel.emit()" (keyup)="onKeyup($event)" />
+  <input
+    #nameInput
+    type="text"
+    [formControl]="name"
+    (blur)="cancel.emit()"
+    (keyup)="onKeyup($event)"
+  />
 </div>
