feat(player): Working on player validation.
- Hooking player deletion back up.
- Starting on an error event emitter.
- Reworked my player validator to only care about duplicate names.

Issue #96

--- a/src/app/players/components/players-list/players-list.component.html
+++ b/src/app/players/components/players-list/players-list.component.html
@@ -6,6 +6,7 @@
   (cancel)="selectedPlayerId = null"
   (changePlayer)="onChangePlayer($event)"
   (click)="selectPlayer(player.id)"
+  (deletePlayer)="onDeletePlayer(player.id)"
 ></mm-players-list-item>
 <mm-new-player-list-item
   *ngIf="isAdding"
