--- a/src/app/players/components/players-list-item/players-list-item.component.html
+++ b/src/app/players/components/players-list-item/players-list-item.component.html
@@ -13,7 +13,7 @@
   />
 </div>
 <div class="delete-icon">
-  <button mat-icon-button (click)="clickDelete.emit()">
+  <button mat-icon-button (click)="deletePlayer.emit()">
     <mat-icon>delete</mat-icon>
   </button>
 </div>
