feat(player): Working on player validation.
- Adding snack bar for showing validation errors.
- Adding error icon when validation is failing.

Issue #96

--- a/src/app/players/components/players-list-item/players-list-item.component.html
+++ b/src/app/players/components/players-list-item/players-list-item.component.html
@@ -1,5 +1,10 @@
 <div class="icon">
-  <mat-icon aria-hidden="true">person</mat-icon>
+  <mat-icon
+    aria-hidden="true"
+    color="{{ selected && name.invalid ? 'warn' : '' }}"
+  >
+    {{ selected && name.invalid ? 'error' : 'person' }}
+  </mat-icon>
 </div>
 <div class="player-name">
   <div *ngIf="!selected">{{ player.name }}</div>
