--- a/src/app/players/containers/players-page/players-page.component.html
+++ b/src/app/players/containers/players-page/players-page.component.html
@@ -7,6 +7,7 @@
   (changePlayer)="onChangePlayer($event)"
   (createPlayer)="onCreatePlayer($event)"
   (deletePlayer)="onDeletePlayer($event)"
+  (error)="onError($event)"
 ></mm-players-list>
 
 <mm-setup-footer
