style: Moving tokens into new style dir.
- Removing DSP from project.
- Committing a bunch of WIP stuff from many months ago that was on my computer.

Issue #96

--- a/src/app/players/components/new-player-list-item/new-player-list-item.component.html
+++ b/src/app/players/components/new-player-list-item/new-player-list-item.component.html
@@ -1,5 +1,7 @@
 <div class="icon">
-  <mat-icon>person_add</mat-icon>
+  <mat-icon aria-hidden="true" color="{{ name.invalid ? 'warn' : '' }}">
+    {{ name.invalid ? 'error' : 'person_add' }}
+  </mat-icon>
 </div>
 <div class="player-name">
   <input
