--- a/src/app/players/components/players-list/players-list.component.html
+++ b/src/app/players/components/players-list/players-list.component.html
@@ -11,6 +11,8 @@
 ></mm-players-list-item>
 <mm-new-player-list-item
   *ngIf="isAdding"
+  [playerNames]="playerNames"
   (cancel)="isAdding = false"
   (createPlayer)="createPlayer.emit($event)"
+  (error)="error.emit($event)"
 ></mm-new-player-list-item>
