--- a/src/app/players/components/setup-footer/setup-footer.component.scss
+++ b/src/app/players/components/setup-footer/setup-footer.component.scss
@@ -1,4 +1,3 @@
-@import '~@angular/material/theming';
 @import 'abstracts/variables';
 
 @mixin fab-bottom($toolbar-height) {
@@ -9,10 +8,10 @@
   position: fixed;
   left: calc(50% - (#{$mat-fab-size} / 2));
 
-  @include fab-bottom($mat-toolbar-height-desktop);
+  @include fab-bottom(64px);
 
-  @media ($mat-xsmall) {
-    @include fab-bottom($mat-toolbar-height-mobile);
+  @media (max-width: 599px) {
+    @include fab-bottom(56px);
   }
 }
 
