--- a/src/app/tournament/containers/setup-page/setup-page.component.scss
+++ b/src/app/tournament/containers/setup-page/setup-page.component.scss
@@ -1,4 +1,5 @@
 // @import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import 'themes/theme';
 // .players-list {
 //   @media (min-width: 600px) {
@@ -19,8 +20,8 @@ $primary: map-get($mirror-match-theme, primary);
 
   footer {
     align-items: center;
-    color: mat-color($primary, default-contrast);
-    background: mat-color($primary);
+    color: mat.get-color-from-palette($primary, default-contrast);
+    background: mat.get-color-from-palette($primary);
     bottom: 0;
     display: flex;
     flex-direction: row;
