--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
+@use '~@angular/material' as mat;
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
 // Plus imports for other components in your app.
 // @import 'mixins/mm-footer.scss';
 // @import 'mixins/mm-sidenav.scss';
@@ -10,7 +9,7 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
@@ -35,7 +34,7 @@
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($mirror-match-theme);
+@include mat.all-component-themes($mirror-match-theme);
 
 // @include mm-footer-theme($mirror-match-theme);
 // @include mm-sidenav-theme($mirror-match-theme);
