--- a/src/mixins/mm-footer.scss
+++ b/src/mixins/mm-footer.scss
@@ -1,9 +1,9 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 
 @mixin mm-footer-theme($theme) {
   $background: map-get($theme, background);
 
   .mm-footer {
-    background-color: mat-color($background, status-bar);
+    background-color: mat.get-color-from-palette($background, status-bar);
   }
 }
