--- a/src/sass/themes/_color.scss
+++ b/src/sass/themes/_color.scss
@@ -1,18 +1,18 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$mirror-match-primary: mat-palette($mat-blue, 400);
-$mirror-match-accent: mat-palette($mat-indigo, A200, A100, A400);
+$mirror-match-primary: mat.define-palette(mat.$blue-palette, 400);
+$mirror-match-accent: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$mirror-match-warn: mat-palette($mat-red);
+$mirror-match-warn: mat.define-palette(mat.$red-palette);
 
 $mirror-match-color: (
   'primary': $mirror-match-primary,
   'accent': $mirror-match-accent,
   'warn': $mirror-match-warn,
-  'foreground': $mat-light-theme-foreground,
-  'background': $mat-light-theme-background
+  'foreground': mat.$light-theme-foreground-palette,
+  'background': mat.$light-theme-background-palette
 );
