style: Fixing sass upgrade error breaking the tests.
Issue #96

--- a/src/sass/themes/_mm-editable-text.scss
+++ b/src/sass/themes/_mm-editable-text.scss
@@ -1,6 +1,6 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @mixin mm-editable-text-typography($config-or-theme) {
-  $config: mat-get-typography-config($config-or-theme);
+  $config: mat.get-typography-config($config-or-theme);
 
   mm-editable-text {
     input {
