build: Updating to Angular Material 13
Issue #96

--- a/src/mixins/players-list.component.scss
+++ b/src/mixins/players-list.component.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 @mixin players-list-color($config_or_theme) {
   $config: mat-get-color-config($config_or_theme);
