--- a/src/app/core/components/bottom-sheet/bottom-sheet.component.scss
+++ b/src/app/core/components/bottom-sheet/bottom-sheet.component.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @import 'themes/theme';
 
 $background: map-get($mirror-match-theme, background);
