--- a/src/app/players/components/new-player-list-item/new-player-list-item.component.scss
+++ b/src/app/players/components/new-player-list-item/new-player-list-item.component.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @import 'themes/color';
 
 $primary: map-get($mirror-match-color, 'primary');
