--- a/src/app/tournament/containers/setup-page/setup-page.component.scss
+++ b/src/app/tournament/containers/setup-page/setup-page.component.scss
@@ -1,5 +1,5 @@
-// @import '~@angular/material/theming';
-@use '~@angular/material' as mat;
+// @import '@angular/material/theming';
+@use '@angular/material' as mat;
 @import 'themes/theme';
 // .players-list {
 //   @media (min-width: 600px) {
