--- a/src/mixins/mm-footer.scss
+++ b/src/mixins/mm-footer.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 @mixin mm-footer-theme($theme) {
   $background: map-get($theme, background);
