--- a/src/sass/themes/_typography.scss
+++ b/src/sass/themes/_typography.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 // Just using default typography but still create the config for it.
 $mirror-match-typography: mat.define-typography-config();
